# OOD

./: .gitignore
OOD-2/lab_01/figure/: CCircle.cpp  CCircle.h  CColanAndCommas.cpp  CColonAndCommas.h  CDecorator.cpp  CDecorator.h  CRectangle.cpp  CRectangle.h  CTriangle.cpp  CTriangle.h  IShape.h  figure.sln  figure.vcxproj  figure.vcxproj.filters  main.cpp
OOD-2/lab_02/figure/: CCircleDecorator.cpp  CCircleDecorator.h  CRectangleDecorator.cpp  CRectangleDecorator.h  CShapeComposite.cpp  CShapeComposite.h  CShapeDecorator.cpp  CShapeDecorator.h  CTriangleDecorator.cpp  CTriangleDecorator.h  IShapeDecorator.cpp  IShapeDecorator.h  figure.vcxproj  figure.vcxproj.filters  main.cpp
OOD-2/lab_03/figure/: CAddNewCircle.h  CAddNewRectangle.h  CAddNewTriangle.h  CChangeFillColourBlue.h  CChangeFillColourGreen.h  CChangeFillColourRed.cpp  CChangeFillColourRed.h  CChangeFillColourYellow.h  CChangeOutlineColorBlue.h  CChangeOutlineColorGreen.h  CChangeOutlineColorRed.h  CChangeOutlineColorYellow.h  CChangeOutlineThickness2.h  CChangeOutlineThickness4.h  CCircleDecorator.cpp  CFigureMachine.h  CPoint.cpp  CRectangleDecorator.cpp  CRectangleDecorator.h  CShapeComposite.cpp  CStateChangeFillColor.cpp  CStateChangeFillColor.h  CStateChangeOutlineColor.h  CStateDragAndDrop.h  CTriangleDecorator.cpp  CTriangleDecorator.h  IFigureMachine.h  IState.h  figure.vcxproj  figure.vcxproj.filters  main.cpp
OOD-2/lab_04/: tect.txt  tect_group.txt
OOD-2/lab_04/figure/: CButtonNoClick.h  CCircleDecorator.cpp  CCircleDecorator.h  CCommandAddFigure.h  CCommandFillColor.h  CCommandThickness.h  CHandler.h  CMementoState.h  CRectangleDecorator.cpp  CRectangleDecorator.h  CShapeComposite.cpp  CShapeComposite.h  CShapeFillColorVisitor.h  CShapeOutlineColorVisitor.h  CShapeOutlineThicknessVisitor.h  CStateAddFigure.h  CStateDragAndDrop.h  CStateFillColor.h  CStateGroupFigures.h  (+24 more)
lab_01/task_01/: duck.sln
meetingSFML/: tasks.txt
meetingSFML/labs/: CMakeLists.txt
meetingSFML/labs/lab_01/: CMakeLists.txt  main.cpp
meetingSFML/labs/lab_01/figureClass/: CCircle.cpp  CCircle.h  CPoint.cpp  CPoint.h  CRectangle.cpp  CRectangle.h  CTriangle.cpp  CTriangle.h  IShape.h
meetingSFML/sfml.1/: CMakeLists.txt
meetingSFML/sfml.1/01/: CMakeLists.txt  main.cpp
meetingSFML/sfml.1/02/: CMakeLists.txt  main.cpp
(+145 files in other folders)
